--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,5 +1,13 @@
 .elements {
   display: grid;
-  grid-template-columns: repeat(3, 282px);
+  grid-template-columns: repeat(auto-fill, 282px);
   grid-gap: 20px;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 950px) {
+  .elements {
+    max-width: 90vw;
+  }
 }
