--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -4,3 +4,17 @@
   line-height: 22px;
   color: #545454;
 }
+
+@media screen and (max-width: 900px) {
+  .footer__copyright {
+    margin: 0;
+    margin-left: 5vw;
+  }
+}
+
+@media screen and (max-width: 430px) {
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
