--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -3,3 +3,15 @@
   width: 120px;
   margin: auto 32px auto 0;
 }
+
+@media screen and (max-width: 900px) {
+  .profile__avatar {
+    margin-left: 28px;
+  }
+}
+
+@media screen and (max-width: 740px) {
+  .profile__avatar {
+    margin: 0 auto 28px auto;
+  }
+}
