--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -4,3 +4,9 @@
   justify-content: center;
   margin-right: auto;
 }
+
+@media screen and (max-width: 740px) {
+  .profile__info {
+    margin: 0; 
+  }
+}
