--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -4,3 +4,15 @@
   line-height: 56px;
   margin: 0 16px 0 0;
 }
+
+@media screen and (max-width: 740px) {
+  .profile__name {
+    text-align: center; 
+  }
+}
+
+@media screen and (max-width: 430px) {
+  .profile__name {
+    font-size: 27px;
+  }
+}
