--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,3 +4,15 @@
   padding: 64px 0;
   width: 882px;
 }
+
+@media screen and (max-width: 900px) {
+  .footer {
+    width: 100%;  
+  }
+}
+
+@media screen and (max-width: 430px) {
+  .footer {
+    padding: 48px 0 36px 0;
+  }
+}
