--- a/blocks/popup/__name/popup__name.css
+++ b/blocks/popup/__name/popup__name.css
@@ -1,11 +1,9 @@
 .popup__name {
-  margin-top: 52px;
+  width: 100%;
   height: 40px;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
-}
-
-.popup__name::placeholder {
+  margin: 0;
   font-weight: normal;
   font-size: 14px;
   line-height: 17px;
