--- a/blocks/popup/__occupation/popup__occupation.css
+++ b/blocks/popup/__occupation/popup__occupation.css
@@ -1,11 +1,9 @@
 .popup__occupation {
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
-  margin-top: 16px;
+  margin-top: 8px;
+  width: 100%;
   height: 40px;
-}
-
-.popup__occupation::placeholder {
   font-weight: normal;
   font-size: 14px;
   line-height: 17px;
