--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -2,7 +2,7 @@
   width: 150px;
   height: 50px;
   border: 2px solid white;
-  background-image: url(/images/profile/cross.svg);
+  background-image: url(../../../images/profile/cross.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-color: black;
@@ -13,4 +13,24 @@
 
 .profile__add-button:hover {
   opacity: .6;
+}
+
+@media screen and (max-width: 900px) {
+  .profile__add-button {
+    margin-right: 28px;
+  }
+}
+
+@media screen and (max-width: 740px) {
+  .profile__add-button {
+    margin-top: 36px;
+    margin-right: 0;
+    width: 340px;
+  }
+}
+
+@media screen and (max-width: 430px) {
+  .profile__add-button {
+    width: 90vw;
+  }
 }
