--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -14,3 +14,9 @@
 .profile__edit-button:hover {
   opacity: .6;
 }
+
+@media screen and (max-width: 430px) {
+  .profile__edit-button {
+    margin: 0;
+  }
+}
