Исправления по комментариям 1

--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,18 +1,24 @@
 .popup__close-button {
   position: absolute;
-  top: -50px;
-  right: -50px;
+  width: 32px;
+  height: 32px;
+  top: -35px;
+  right: -35px;
   cursor: pointer;
   transition: all .5s ease-in;
+  background-image: url(../../../images/popup/Close_Icon.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: black;
+  border: none;
 }
 
 .popup__close-button:hover {
-  transform: rotate(45deg);
   opacity: .6;
 }
 
 @media screen and (max-width: 520px) {
   .popup__close-button {
-    right: -14px;
+    right: 0;
   }
 }
