--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -3,7 +3,7 @@
   min-height: 52px;
   background: #000000;
   border-radius: 2px;
-  margin-top: auto;
+  margin-top: 44px;
   display: flex;
   align-items: center;
   justify-content: center;
