--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -17,6 +17,9 @@
 
 @media screen and (max-width: 430px) {
   .profile__edit-button {
+    width: 18px;
+    height: 18px;
+    background-size: 8px;
     margin: 0;
   }
 }
