--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,3 +1,7 @@
+.header__logo {
+  margin: 40px 0;
+}
+
 @media screen and (max-width: 900px) {
   .header__logo {
     margin-left: 28px;
@@ -7,5 +11,7 @@
 @media screen and (max-width: 430px) {
   .header__logo {
     width: 104px;
+    margin-top: 30px;
+    margin-bottom: 30px;
   }
 }
