--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,6 +1,9 @@
 .popup__container {
   width: 430px;
-  height: 330px;
+  position: fixed;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%);
   background-color: #FFFFFF;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
@@ -10,12 +13,11 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 36px;
-  position: relative;
   box-sizing: border-box;
 }
 
 @media screen and (max-width: 520px) {
   .popup__container {
-    max-width: 90vw;
+    max-width: 88vw;
   }
 }
