--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,9 +1,8 @@
-.popup__occupation {
-  border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, .2);
-  margin-top: 8px;
+.popup__input {
   width: 100%;
   height: 40px;
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, .2);
   font-weight: normal;
   font-size: 14px;
   line-height: 17px;
