--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,17 +1,16 @@
 @import url(./__container/popup__container.css);
-@import url(./__name/popup__name.css);
-@import url(./__occupation/popup__occupation.css);
 @import url(./__title/popup__title.css);
 @import url(./__close-button/popup__close-button.css);
 @import url(./__submit-button/popup__submit-button.css);
+@import url(./__input/popup__input.css);
+@import url(./__input/_name/popup__input_name.css);
+@import url(./__input/_occupation/popup__input_occupation.css);
 
 .popup {
-  display: flex;
-  align-items: center;
-  justify-items: center;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, .5);
   position: fixed;
   display: none;
+  z-index: 2;
 }
