--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -11,6 +11,8 @@
   height: 100%;
   background-color: rgba(0, 0, 0, .5);
   position: fixed;
+  top: 0;
+  left: 0;
   display: none;
   z-index: 2;
 }
