--- a/pages/index.css
+++ b/pages/index.css
@@ -8,3 +8,4 @@
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/opacity/opacity.css);
