Карточки, корзина, лайк

--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,6 +1,8 @@
 @import url(./__image/element__image.css);
 @import url(./__like/element__like.css);
 @import url(./__title/element__title.css);
+@import url(./__like/_active/element__like_active.css);
+@import url(./__trash/element__trash.css);
 
 .element {
   background-color: white;
