--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -6,5 +6,7 @@
   line-height: 29px;
   margin: auto auto auto 20px;
   word-wrap: none;
+  overflow: hidden;
   text-overflow: ellipsis;
+  max-width: 220px;
 }
