--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -20,3 +20,10 @@
   background: rgba(0, 0, 0, 0.8);
 }
 
+@media screen and (max-width: 520px) {
+  .popup__submit-button{
+    font-size: 14px;
+    line-height: 17px;
+    min-height: 40px;
+  }
+}
