--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -6,3 +6,12 @@
   margin-top: 0;
   margin-bottom: 40px;
 }
+
+
+@media screen and (max-width: 520px) {
+  .popup__title {
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 30px;
+  }
+}
