--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,7 +1,7 @@
 .element__image {
   object-fit: cover;
-  width: 100%;
-  max-height: 100%;
+  width: 282px;
+  height: 282px;
   cursor: pointer;
   grid-area: image;
 }
