--- a/blocks/profile/__occupation/profile__occupation.css
+++ b/blocks/profile/__occupation/profile__occupation.css
@@ -9,7 +9,7 @@
 @media screen and (max-width: 740px) {
   .profile__occupation {
     text-align: center; 
-    margin: 0;
+    margin-top: 10px;
   }
 }
 
