--- a/blocks/profile/__edit-wrapper/profile__edit-wrapper.css
+++ b/blocks/profile/__edit-wrapper/profile__edit-wrapper.css
@@ -4,3 +4,10 @@
   align-items: center;
   margin-bottom: 0;
 }
+
+@media screen and (max-width: 430px) {
+  .profile__edit-wrapper {
+    width: 88vw;
+    justify-content: space-between;    
+  }
+}
